@@ -256,6 +256,24 @@ void CMainFrame::OnFilePrint()
 	::DeleteObject(hbmView);
 }
 
+void CMainFrame::OnInitialUpdate()
+{
+	// Here we process the command line arguments, and automatically load a file if one is specified.
+	// GetCommandLineW retrieves our command line arguments.
+	// CommandLineToArgvW parses the command line arguements in to an array of strings 
+	// The first string (lpArgv[0]) contains the name of our program
+	// The second string (lpArg[1]) contains an additional parameter (presumably a filename to load).
+
+	int argCount = 0;
+	LPWSTR* lpArgv = ::CommandLineToArgvW(::GetCommandLineW(), &argCount);
+
+	// The second argument (if any) contains our file name.
+	if (argCount >= 2)
+	{
+		m_View.FileOpen((WideToTChar(lpArgv[1])));
+	}
+}
+
 void CMainFrame::SetupToolBar()
 {
 	// Define our toolbar
