@@ -21,6 +21,7 @@ protected:
 	virtual void OnFileSave();
 	virtual void OnFileSaveAs();
 	virtual void OnFilePrint();
+	virtual void OnInitialUpdate();
 	virtual void SetupToolBar();
 	virtual LRESULT WndProc(UINT uMsg, WPARAM wParam, LPARAM lParam);
 
